Improved documentation for baseline notebook

--- a/ashrae/ashrae-baseline.ipynb
+++ b/ashrae/ashrae-baseline.ipynb
@@ -37,13 +37,26 @@
     "nbformat": 4,
     "cells": [
         {
+            "cell_type": "markdown",
+            "source": "# ASHRAE BASELINE\n\nIn this notebook I predict energy consumption for each building using a Ridge regression model. The modelling approach uses minimal feature engineering and hyperparameter tuning and serves a baseline to compare all future modelling approaches against. That is all future modelling approaches should achieve an evaluation score as least as good as the Ridge regression models developed here.",
+            "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2025-01-06T08:17:23.366846Z",
+                    "iopub.execute_input": "2025-01-06T08:17:23.367670Z",
+                    "iopub.status.idle": "2025-01-06T08:17:23.372122Z",
+                    "shell.execute_reply.started": "2025-01-06T08:17:23.367633Z",
+                    "shell.execute_reply": "2025-01-06T08:17:23.370879Z"
+                }
+            }
+        },
+        {
             "cell_type": "code",
             "source": "from datetime import datetime, date\n\nimport pandas as pd\nimport numpy as np\nfrom tqdm import tqdm\n\nfrom sklearn.compose import ColumnTransformer, TransformedTargetRegressor\nfrom sklearn.linear_model import Ridge, Lasso\nfrom sklearn.preprocessing import OneHotEncoder\nfrom sklearn.pipeline import Pipeline",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -53,8 +66,8 @@
                 "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -67,8 +80,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -77,21 +90,21 @@
         },
         {
             "cell_type": "code",
-            "source": "def kbtu_to_kwh(df: pd.DataFrame) -> pd.DataFrame:\n    mask = (df[\"building_id\"] == 0) & (df[\"meter_id\"] == 0)\n    df.loc[mask, \"meter_reading\"] = df.loc[mask, \"meter_reading\"] * 0.2931\n    return df\n\n\ndef get_meter_id_dummies(df: pd.DataFrame) -> pd.DataFrame:\n    meter_dummies = pd.get_dummies(df[\"meter_id\"], dtype=float, prefix=\"meter_id\")\n    return pd.concat([df, meter_dummies], axis=1)\n\n\ndef cyclic_features(df: pd.DataFrame, feature: str, period: int) -> pd.DataFrame:\n    df[f\"{feature}_sin\"] = np.sin(2 * np.pi * df[feature] / period)\n    df[f\"{feature}_cos\"] = np.cos(2 * np.pi * df[feature] / period)\n    return df\n\n\ndef temporal_features(df: pd.DataFrame) -> pd.DataFrame:\n    df[\"hour\"] = df[\"timestamp\"].dt.hour\n    df = cyclic_features(df, \"hour\", 24)\n    \n    df[\"day_of_week\"] = df[\"timestamp\"].dt.weekday\n    df = cyclic_features(df, \"day_of_week\", 7)\n    \n    df[\"month\"] = df[\"timestamp\"].dt.month\n    df = cyclic_features(df, \"month\", 12)\n    \n    df[\"is_weekend\"] = (df[\"timestamp\"].dt.weekday >= 5).astype(float)\n    \n    return df\n\n\ndef target_transform(df: pd.DataFrame) -> pd.DataFrame:\n    df[\"log_reading\"] = np.log1p(np.array(df[\"meter_reading\"]))\n    return df",
+            "source": "def kbtu_to_kwh(df: pd.DataFrame) -> pd.DataFrame:\n    mask = (df[\"building_id\"] == 0) & (df[\"meter_id\"] == 0)\n    df.loc[mask, \"meter_reading\"] = df.loc[mask, \"meter_reading\"] * 0.2931\n    return df\n\n\ndef cyclic_features(df: pd.DataFrame, feature: str, period: int) -> pd.DataFrame:\n    df[f\"{feature}_sin\"] = np.sin(2 * np.pi * df[feature] / period)\n    df[f\"{feature}_cos\"] = np.cos(2 * np.pi * df[feature] / period)\n    return df\n\n\ndef temporal_features(df: pd.DataFrame) -> pd.DataFrame:\n    df[\"hour\"] = df[\"timestamp\"].dt.hour\n    df = cyclic_features(df, \"hour\", 24)\n    \n    df[\"day_of_week\"] = df[\"timestamp\"].dt.weekday\n    df = cyclic_features(df, \"day_of_week\", 7)\n    \n    df[\"month\"] = df[\"timestamp\"].dt.month\n    df = cyclic_features(df, \"month\", 12)\n    \n    df[\"is_weekend\"] = (df[\"timestamp\"].dt.weekday >= 5).astype(float)\n    \n    return df\n\n\ndef target_transform(df: pd.DataFrame) -> pd.DataFrame:\n    df[\"log_reading\"] = np.log1p(np.array(df[\"meter_reading\"]))\n    return df",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "train_df = kbtu_to_kwh(train_df)\n# train_df = get_meter_id_dummies(train_df)\ntrain_df = temporal_features(train_df)\n# train_df = target_transform(train_df)",
+            "source": "train_df = kbtu_to_kwh(train_df)\ntrain_df = temporal_features(train_df)\n\ntrain_df.head()",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -112,17 +125,17 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "# Construct pipeline\n\ndef get_transformer():\n    transformer = ColumnTransformer(\n        [(\"oh_encoder\", OneHotEncoder(), [\"meter_id\"])],\n        remainder=\"passthrough\",\n        verbose_feature_names_out=False,\n    )\n    return transformer\n\n\ndef get_regressor():\n    regressor = TransformedTargetRegressor(\n        regressor=Ridge(),\n        func=np.log1p,\n        inverse_func=np.expm1,\n    )\n    return regressor\n\n\ndef make_pipeline():\n    pipeline = Pipeline(\n        steps = [\n            (\"transformer\", get_transformer()),\n            (\"regressor\", get_regressor())\n        ]\n    )\n    return pipeline",
+            "source": "# Construct pipeline\n\ndef get_column_transformer():\n    transformer = ColumnTransformer(\n        [(\"oh_encoder\", OneHotEncoder(), [\"meter_id\"])],\n        remainder=\"passthrough\",\n        verbose_feature_names_out=False,\n    )\n    return transformer\n\n\ndef get_target_regressor():\n    regressor = TransformedTargetRegressor(\n        regressor=Ridge(),\n        func=np.log1p,\n        inverse_func=np.expm1,\n    )\n    return regressor\n\n\ndef make_pipeline():\n    pipeline = Pipeline(\n        steps = [\n            (\"transformer\", get_column_transformer()),\n            (\"regressor\", get_target_regressor())\n        ]\n    )\n    return pipeline",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -130,8 +143,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -144,8 +157,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -153,17 +166,17 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "# test_df = get_meter_id_dummies(test_df)\ntest_df = temporal_features(test_df)",
+            "source": "test_df = temporal_features(test_df)\n\ntest_df.head()",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -171,8 +184,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -180,8 +193,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
