Update EDA notebook with analysis of missing readings

--- a/ashrae/ashrae-eda.ipynb
+++ b/ashrae/ashrae-eda.ipynb
@@ -37,6 +37,11 @@
     "nbformat": 4,
     "cells": [
         {
+            "cell_type": "markdown",
+            "source": "# ASHRAE EDA",
+            "metadata": {}
+        },
+        {
             "cell_type": "code",
             "source": "from datetime import datetime, date\nimport pandas as pd\nimport numpy as np\nfrom matplotlib import cm\nimport matplotlib.pyplot as plt\nimport seaborn as sns",
             "metadata": {
@@ -44,31 +49,71 @@
                 "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "# Constants\nINPUT_DATA_PATH = \"/kaggle/input/ashrae-energy-prediction\"\n\nMIN_TRAIN_TIMESTAMP = pd.Timestamp(\"2016-01-01 00:00:00\")\nMAX_TRAIN_TIMESTAMP = pd.Timestamp(\"2016-12-31 23:00:00\")\nTRAIN_DATA_RESOLUTION = \"1h\"\n\nWEATHER_FEATURE_COLUMNS = [\n    'air_temperature',\n    'cloud_coverage',\n    'dew_temperature',\n    'precip_depth_1_hr',\n    'sea_level_pressure',\n    'wind_direction',\n    'wind_speed'\n]",
+            "source": "# Constants\nINPUT_DATA_PATH = \"/kaggle/input/ashrae-energy-prediction\"\n\nMIN_TRAIN_TIMESTAMP = pd.Timestamp(\"2016-01-01 00:00:00\")\nMAX_TRAIN_TIMESTAMP = pd.Timestamp(\"2016-12-31 23:00:00\")\nTRAIN_DATA_RESOLUTION = \"1h\"",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "# Load raw data\nreadings_df = pd.read_csv(f\"{INPUT_DATA_PATH}/train.csv\")\nweather_df = pd.read_csv(f\"{INPUT_DATA_PATH}/weather_train.csv\")",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
             "source": "# Meter readings",
             "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "source": "# Load raw data\n\nreadings_df = pd.read_csv(\n    f\"{INPUT_DATA_PATH}/train.csv\",\n    header=0,\n    names=[\"building_id\", \"meter_id\", \"timestamp\", \"meter_reading\"],\n    parse_dates=[\"timestamp\"],\n    dtype={\"meter_reading\": float}\n)",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": "## Missing readings data",
+            "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2025-01-06T08:56:36.978836Z",
+                    "iopub.execute_input": "2025-01-06T08:56:36.979274Z",
+                    "iopub.status.idle": "2025-01-06T08:56:36.984611Z",
+                    "shell.execute_reply.started": "2025-01-06T08:56:36.979234Z",
+                    "shell.execute_reply": "2025-01-06T08:56:36.983382Z"
+                }
+            }
+        },
+        {
+            "cell_type": "code",
+            "source": "# Expected number of readings given number of buildings and date range\nn_buildings = readings_df[\"building_id\"].nunique()\nn_timestamps_exp = len(pd.date_range(MIN_TRAIN_TIMESTAMP, MAX_TRAIN_TIMESTAMP, freq=TRAIN_DATA_RESOLUTION))\nn_samples_exp = n_buildings * n_timestamps_exp",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "# Get actual number of unique timestamps\nn_readings_by_building = (\n    readings_df.groupby(\"building_id\")[[\"timestamp\"]]\n    .nunique()\n    .sort_values(by=\"timestamp\")\n    .reset_index()\n)\n\nn_samples_obs = sum(n_readings_by_building[\"timestamp\"])\nn_samples_exp, n_samples_obs, (n_samples_exp - n_samples_obs)",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "# Are readings missing randomly or only at start?",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -77,12 +122,12 @@
         },
         {
             "cell_type": "code",
-            "source": "# Note: meter_id: type -> {0: electricity, 1: chilledwater, 2: steam, 3: hotwater}\n# Conclusion: Not every building as readings for every meter type\n\nmeter_counts_by_building = readings_df.groupby(\"building_id\")[\"meter\"].nunique()\nfreq, edges = np.histogram(\n    np.array(meter_counts_by_building),\n    np.arange(1, meter_counts_by_building.max() + 2)\n)\n\nfig, ax = plt.subplots()\nax.bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\")\nax.set(ylabel=\"Frequency\", xlabel=\"n_meters\", xticks=edges[:-1]);",
+            "source": "# Note: meter_id: type -> {0: electricity, 1: chilledwater, 2: steam, 3: hotwater}\n# Conclusion: Not every building as readings for every meter type\n\nmeter_counts_by_building = readings_df.groupby(\"building_id\")[\"meter_id\"].nunique()\nfreq, edges = np.histogram(\n    np.array(meter_counts_by_building),\n    np.arange(1, meter_counts_by_building.max() + 2)\n)\n\nfig, ax = plt.subplots()\nax.bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\")\nax.set(ylabel=\"Frequency\", xlabel=\"n_meters\", xticks=edges[:-1]);",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -91,21 +136,21 @@
         },
         {
             "cell_type": "code",
-            "source": "# Fix units for one of the meters: https://www.kaggle.com/c/ashrae-energy-prediction/discussion/119261\nmask = (readings_df[\"building_id\"] == 0) & (readings_df[\"meter\"] == 0)\nreadings_df.loc[mask, \"meter_reading\"] = readings_df.loc[mask, \"meter_reading\"] * 0.2931",
+            "source": "# Fix units for one of the meters: https://www.kaggle.com/c/ashrae-energy-prediction/discussion/119261\nmask = (readings_df[\"building_id\"] == 0) & (readings_df[\"meter_id\"] == 0)\nreadings_df.loc[mask, \"meter_reading\"] = readings_df.loc[mask, \"meter_reading\"] * 0.2931",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "readings = np.array(readings_df[\"meter_reading\"])\nlog_readings = np.log(readings + 1)\n\nfig, ax = plt.subplots(1, 2, figsize=(10, 3.5))\nfreq, edges = np.histogram(readings)\nax[0].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\")\nax[0].set(ylabel=\"Frequency\", xlabel=\"meter_reading\", xticks=edges[:-1]);\n\nfreq, edges = np.histogram(log_readings)\nax[1].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\")\nax[1].set(ylabel=\"Frequency\", xlabel=\"log_meter_reading\", xticks=edges[:-1]);\nfig.tight_layout();",
+            "source": "readings = np.array(readings_df[\"meter_reading\"])\nlog_readings = np.log1p(readings)\n\nfig, ax = plt.subplots(1, 2, figsize=(10, 3.5))\nfreq, edges = np.histogram(readings)\nax[0].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\")\nax[0].set(ylabel=\"Frequency\", xlabel=\"meter_reading\", xticks=edges[:-1]);\n\nfreq, edges = np.histogram(log_readings)\nax[1].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\")\nax[1].set(ylabel=\"Frequency\", xlabel=\"log_meter_reading\", xticks=edges[:-1]);\nfig.tight_layout();",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -114,12 +159,12 @@
         },
         {
             "cell_type": "code",
-            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nfig, ax = plt.subplots(len(meter_types), 2, figsize=(10, 3.5 * len(meter_types)))\n\nfor i, (meter_id, meter_type) in enumerate(meter_types.items()):\n    meter_df = readings_df[readings_df[\"meter\"] == meter_id]\n    \n    readings = np.array(meter_df[\"meter_reading\"])\n    freq, edges = np.histogram(readings)\n    ax[i, 0].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\", label=meter_type)\n    ax[i, 0].set(ylabel=\"Frequency\")\n    ax[i, 0].legend()\n    \n    log_readings = np.log(readings + 1)\n    freq, edges = np.histogram(log_readings)\n    ax[i, 1].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\", label=f\"log {meter_type}\")\n    ax[i, 1].set(xticks=edges[:-1])\n    ax[i, 1].legend()\n\nfig.tight_layout();",
+            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nfig, ax = plt.subplots(len(meter_types), 2, figsize=(10, 3.5 * len(meter_types)))\n\nfor i, (meter_id, meter_type) in enumerate(meter_types.items()):\n    meter_df = readings_df[readings_df[\"meter_id\"] == meter_id]\n    \n    readings = np.array(meter_df[\"meter_reading\"])\n    freq, edges = np.histogram(readings)\n    ax[i, 0].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\", label=meter_type)\n    ax[i, 0].set(ylabel=\"Frequency\")\n    ax[i, 0].legend()\n    \n    log_readings = np.log(readings + 1)\n    freq, edges = np.histogram(log_readings)\n    ax[i, 1].bar(edges[:-1], freq, width=np.diff(edges), edgecolor=\"black\", label=f\"log {meter_type}\")\n    ax[i, 1].set(xticks=edges[:-1])\n    ax[i, 1].legend()\n\nfig.tight_layout();",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -128,21 +173,21 @@
         },
         {
             "cell_type": "code",
-            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\nmax_buildings = 30  # number of buildings to plot chosen at random\n\nfig, ax = plt.subplots(1, len(meter_types), figsize=(len(meter_types) * 4, 3.5), sharey=True)\nfor m, meter_id in enumerate(meter_types):\n    \n    meter_df = readings_df[(readings_df[\"meter\"] == meter_id)]\n    all_building_ids = list(meter_df[\"building_id\"].unique())\n    building_ids_to_plot = np.random.choice(\n        all_building_ids,\n        min(max_buildings, len(all_building_ids))\n    )\n    \n    colors = cm.viridis(np.linspace(0, 1, len(building_ids_to_plot)))\n    for b, building_id in enumerate(building_ids_to_plot):\n        readings = meter_df[meter_df[\"building_id\"] == building_id][\"meter_reading\"]\n        log_readings = np.log(np.array(readings) + 1)\n        freq, edges = np.histogram(log_readings, bins=50)\n        ax[m].stairs(freq / len(readings), edges, label=building_id, color=colors[b])\n    \n    ax[m].set_title(f\"{meter_types[meter_id]}\")\n\nfig.tight_layout();",
+            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\nmax_buildings = 30  # number of buildings to plot chosen at random\n\nfig, ax = plt.subplots(1, len(meter_types), figsize=(len(meter_types) * 4, 3.5), sharey=True)\nfor m, meter_id in enumerate(meter_types):\n    \n    meter_df = readings_df[(readings_df[\"meter_id\"] == meter_id)]\n    all_building_ids = list(meter_df[\"building_id\"].unique())\n    building_ids_to_plot = np.random.choice(\n        all_building_ids,\n        min(max_buildings, len(all_building_ids))\n    )\n    \n    colors = cm.viridis(np.linspace(0, 1, len(building_ids_to_plot)))\n    for b, building_id in enumerate(building_ids_to_plot):\n        readings = meter_df[meter_df[\"building_id\"] == building_id][\"meter_reading\"]\n        log_readings = np.log(np.array(readings) + 1)\n        freq, edges = np.histogram(log_readings, bins=50)\n        ax[m].stairs(freq / len(readings), edges, label=building_id, color=colors[b])\n    \n    ax[m].set_title(f\"{meter_types[meter_id]}\")\n\nfig.tight_layout();",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "# Plot daily averages\nreadings_df[\"timestamp\"] = pd.to_datetime(readings_df[\"timestamp\"])\ndaily_average = (\n    readings_df\n    .assign(log_reading=np.log(readings_df[\"meter_reading\"] + 1))\n    .groupby([\"building_id\", \"meter\", readings_df[\"timestamp\"].dt.date])\n    [[\"log_reading\"]]\n    .mean()\n    .reset_index()\n)\n\ndaily_building_average = (\n    readings_df\n    .assign(log_reading=np.log(readings_df[\"meter_reading\"] + 1))\n    .groupby([\"meter\", readings_df[\"timestamp\"].dt.date])\n    [[\"log_reading\"]]\n    .mean()\n    .reset_index()\n)\n\nmeter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\nfig, ax = plt.subplots(len(meter_types), 1, figsize=(15, len(meter_types) * 2), sharex=True)\nfor m, meter_id in enumerate(meter_types):\n    \n    meter_df = daily_average[(daily_average[\"meter\"] == meter_id)]\n    building_ids = list(meter_df[\"building_id\"].unique())\n    colors = cm.viridis(np.linspace(0, 1, len(building_ids)))\n    for b, building_id in enumerate(building_ids):\n        readings = meter_df[meter_df[\"building_id\"] == building_id]\n        ax[m].plot(\n            readings[\"timestamp\"].values,\n            readings[\"log_reading\"].values,\n            color=\"gray\",\n            lw=0.5,\n            alpha=0.3\n        )\n    \n    # Add building average to plot\n    average_df = daily_building_average[daily_building_average[\"meter\"] == meter_id]\n    ax[m].plot(\n        average_df[\"timestamp\"].values,\n        average_df[\"log_reading\"].values,\n        color=\"orange\",\n        lw=2.5,\n    )\n    \n    ax[m].set_ylabel(f\"{meter_types[meter_id]}\")\n\nfig.tight_layout();",
+            "source": "# Plot daily averages\nreadings_df[\"timestamp\"] = pd.to_datetime(readings_df[\"timestamp\"])\ndaily_average = (\n    readings_df\n    .assign(log_reading=np.log1p(readings_df[\"meter_reading\"]))\n    .groupby([\"building_id\", \"meter_id\", readings_df[\"timestamp\"].dt.date])\n    [[\"log_reading\"]]\n    .mean()\n    .reset_index()\n)\n\ndaily_building_average = (\n    readings_df\n    .assign(log_reading=np.log1p(readings_df[\"meter_reading\"]))\n    .groupby([\"meter_id\", readings_df[\"timestamp\"].dt.date])\n    [[\"log_reading\"]]\n    .mean()\n    .reset_index()\n)\n\nmeter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\nfig, ax = plt.subplots(len(meter_types), 1, figsize=(15, len(meter_types) * 2), sharex=True)\nfor m, meter_id in enumerate(meter_types):\n    \n    meter_df = daily_average[(daily_average[\"meter_id\"] == meter_id)]\n    building_ids = list(meter_df[\"building_id\"].unique())\n    for b, building_id in enumerate(building_ids):\n        readings = meter_df[meter_df[\"building_id\"] == building_id]\n        ax[m].plot(\n            readings[\"timestamp\"].values,\n            readings[\"log_reading\"].values,\n            color=\"gray\",\n            lw=0.5,\n            alpha=0.3\n        )\n    \n    # Add building average to plot\n    average_df = daily_building_average[daily_building_average[\"meter_id\"] == meter_id]\n    ax[m].plot(\n        average_df[\"timestamp\"].values,\n        average_df[\"log_reading\"].values,\n        color=\"orange\",\n        lw=2.5,\n    )\n    \n    ax[m].set_ylabel(f\"{meter_types[meter_id]}\")\n\nfig.tight_layout();",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -160,8 +205,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -169,8 +214,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -178,17 +223,17 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "readings_and_buildings[\"timestamp\"] = pd.to_datetime(readings_and_buildings[\"timestamp\"])\ndaily_average_by_use = (\n    readings_and_buildings\n    .assign(log_reading=np.log(readings_and_buildings[\"meter_reading\"] + 1))\n    .groupby([\n        \"primary_use\",\n        \"meter\",\n        readings_and_buildings[\"timestamp\"].dt.date\n    ])\n    [[\"log_reading\"]]\n    .mean()\n    .reset_index()\n)",
+            "source": "readings_and_buildings[\"timestamp\"] = pd.to_datetime(readings_and_buildings[\"timestamp\"])\ndaily_average_by_use = (\n    readings_and_buildings\n    .assign(log_reading=np.log1p(readings_and_buildings[\"meter_reading\"]))\n    .groupby([\n        \"primary_use\",\n        \"meter\",\n        readings_and_buildings[\"timestamp\"].dt.date\n    ])\n    [[\"log_reading\"]]\n    .mean()\n    .reset_index()\n)",
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -196,8 +241,8 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -205,15 +250,17 @@
             "metadata": {
                 "trusted": true
             },
-            "execution_count": null,
-            "outputs": []
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
-            "source": "",
-            "metadata": {},
-            "execution_count": null,
-            "outputs": []
+            "source": "# Distribution by meter and building type",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
